# ChangeLog for dev-libs/apr-util
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/apr-util/ChangeLog,v 1.170 2011/10/29 18:43:37 armin76 Exp $

  29 Oct 2011; Raúl Porcel <armin76@gentoo.org> apr-util-1.3.12.ebuild:
  alpha/ia64/s390/sh/sparc stable wrt #385859

  24 Oct 2011; Markus Meier <maekke@gentoo.org> apr-util-1.3.12.ebuild:
  x86 stable, bug #385859

  23 Oct 2011; Markus Meier <maekke@gentoo.org> apr-util-1.3.12.ebuild:
  arm stable, bug #385859

  22 Oct 2011; Kacper Kowalik <xarthisius@gentoo.org> apr-util-1.3.12.ebuild:
  ppc/ppc64 stable wrt #385859

  19 Oct 2011; Jeroen Roovers <jer@gentoo.org> apr-util-1.3.12.ebuild:
  Stable for HPPA (bug #385859).

  19 Oct 2011; Tony Vroon <chainsaw@gentoo.org> apr-util-1.3.12.ebuild:
  Marked stable on AMD64 based on arch testing by Agostino "ago" Sarubbo & Ian
  "idella4" Delaney in security bug #385859.

  09 Sep 2011; Tomáš Chvátal <scarabeus@gentoo.org> apr-util-1.3.12.ebuild:
  Drop the sqlite2 useflag, keep only sqlite3 around.

*apr-util-1.3.12 (29 Jul 2011)

  29 Jul 2011; Jesus Rivero <neurogeek@gentoo.org> +apr-util-1.3.12.ebuild,
  +files/apr-util-1.3.12-bdb-5.2.patch:
  Version bump. Ebuild and patch by Arfrever.

  14 May 2011; Raúl Porcel <armin76@gentoo.org> apr-util-1.3.11.ebuild:
  alpha/arm/ia64/s390/sh/sparc stable wrt #366903

  14 May 2011; Kacper Kowalik <xarthisius@gentoo.org> apr-util-1.3.11.ebuild:
  ppc/ppc64 stable wrt #366903

  13 May 2011; Jeroen Roovers <jer@gentoo.org> apr-util-1.3.11.ebuild:
  Stable for HPPA (bug #366903).

  12 May 2011; Thomas Kahle <tomka@gentoo.org> apr-util-1.3.11.ebuild:
  x86 stable per bug 366903

  11 May 2011; Markos Chandras <hwoarang@gentoo.org> apr-util-1.3.11.ebuild:
  Stable on amd64 wrt bug #366903

*apr-util-1.3.11 (09 May 2011)

  09 May 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +apr-util-1.3.11.ebuild:
  Version bump.
