@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/apr-util
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/apr-util/ChangeLog,v 1.170 2011/10/29 18:43:37 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/apr-util/ChangeLog,v 1.171 2011/11/11 19:19:13 hwoarang Exp $
+
+  11 Nov 2011; Markos Chandras <hwoarang@gentoo.org> apr-util-1.3.12.ebuild:
+  Add static-libs USE flag. Patch by Arfrever.
 
   29 Oct 2011; Raúl Porcel <armin76@gentoo.org> apr-util-1.3.12.ebuild:
   alpha/ia64/s390/sh/sparc stable wrt #385859
